--- a/Front/package.json
+++ b/Front/package.json
@@ -18,6 +18,7 @@
   "packageManager": "pnpm@9.10.0+sha512.73a29afa36a0d092ece5271de5177ecbf8318d454ecd701343131b8ebc0c1a91c487da46ab77c8e596d6acf1461e3594ced4becedf8921b074fbd8653ed7051c",
   "devDependencies": {
     "@formkit/auto-animate": "^0.8.2",
+    "@iconify-json/lucide": "^1.2.33",
     "@nuxt/eslint": "^1.2.0",
     "@nuxt/image": "^1.9.0",
     "@nuxt/test-utils": "^3.17.2",
